# stirling-engine

./: .gitignore  CMakeLists.txt  LICENSE  README.md
glad/: CMakeLists.txt  README.md
glad/include/glad/: gl.h
include/: engine.hpp
src/: engine.cpp  main.cpp
